# WebChatLocalLan

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server_pull.py  service.py
app/: __init__.py  chat_manager.py  config.py  models.py  web.py
app/static/: app.js  styles.css
app/templates/: index.html
scripts/: setup_linux.sh  setup_windows.cmd  setup_windows.ps1
systemd/: webchat-local-lan.service
